remove title from index

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <div class="container-fluid">
 
-    <h1 style="margin-left: 1rem;">UX/UI DESIGNER</h1>
+    <!-- <h1 style="margin-left: 1rem;">UX/UI DESIGNER</h1> -->
 
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
