--- a/temp.html
+++ b/temp.html
@@ -29,11 +29,15 @@
 
 
 
-  <title>Contact</title>
+  <title>Work</title>
 
 </head>
 
 <body>
+
+
+
+
 
   <div class="container-fluid">
 
@@ -51,13 +55,13 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="work.html">Work</a>
+            <a class="nav-link active" href="work.html">Work</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
 
         </ul>
@@ -69,74 +73,22 @@
 
       <div class="container">
 
-        <div class="jumbotron">
-          <h1 class="h1 text-center mb-3">GET IN TOUCH</h1>
 
 
-          <p class="mx-auto">
-            If you're interested in starting a discussing or collaborating on a project you know what to do. At this time I am looking forward to working on UX design, UX design within video games, and photography jobs. Send me a message and lets see what we can
-            come up with. If you prefer, you can message me on <a class="intext-link" href="https://www.linkedin.com/in/ricky-lalli-054353117">LinkedIn</a>.
-          </p>
+          <img src="assets/same.svg" alt="" style="width: 100%;">
 
-        </div>
-
-        <form name="contact" method="POST" action="./send-email.php">
-          <div class="row">
-            <label for="inputFirstName" class="col-sm-2 col-form-label">First&nbsp;Name&#42;</label>
-            <div class="col-sm-12 col-md-4 mb-5">
-              <input type="text" name="inputFirstName" class="form-control" id="inputFirstName" placeholder="First name">
-            </div>
-            <label for="inputLastName" class="col-sm-2 col-form-label">Last&nbsp;Name</label>
-            <div class="col-sm-12 col-md-4 mb-5">
-              <input type="text" name="inputLastName" class="form-control" id="inputLastName" placeholder="Last name">
-            </div>
-          </div>
-        <!-- </form> -->
-
-        <!-- <form> -->
-          <div class="row">
-            <label for="inputEmail" class="col-sm-2 col-form-label">Email&#42;</label>
-            <div class="col-sm-12 col-md-4 mb-5">
-              <input type="text" name="inputEmail" class="form-control" id="inputEmail" placeholder="Email">
-            </div>
-            <label for="inputTopic" class="col-sm-2 col-form-label">Topic&#42;</label>
-            <div class="col-sm-12 col-md-4 mb-5">
-              <input type="text" name="inputTopic" class="form-control" id="inputTopic" placeholder="Topic">
-            </div>
-          </div>
-        <!-- </form> -->
-
-        <!-- <form> -->
-          <div class="row">
-            <label for="inputMessage" class="col-sm-2 col-form-label">Message&#42;</label>
-            <div class="col-sm-12 col-md-10 mb-5">
-              <textarea class="form-control" name="inputMessage" id="inputMessage" rows="3" placeholder="Message..."></textarea>
-            </div>
-          </div>
-        <!-- </form> -->
-
-
-        <div class="row">
-          <div class="mx-auto">
-            <button type="submit" class="btn btn-primary">Send Message</button>
-            <!-- <input type="submit" value="Submit"> -->
-          </div>
-        </div>
-        </form>
 
       </div>
 
-<p>PHP active</p>
+
+
+
+
+
 
 
 
     </section>
-
-
-
-
-
-
 
 
 
@@ -171,7 +123,8 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
   <script src="js/jquery-3.3.1.slim.min.js"></script>
-  <script src="js/popper.min.js"></script>
+  <script src="js/popper.min.js">
+  </script>
   <script src="js/bootstrap.min.js"></script>
 
 </body>
