--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 
         </div>
 
-        <form name="contact" method="POST" action="./send-email.php">
+        <form name="contact" method="GET" action="./send-email.php">
           <div class="row">
             <label for="inputFirstName" class="col-sm-2 col-form-label">First&nbsp;Name&#42;</label>
             <div class="col-sm-12 col-md-4 mb-5">
