removed php action- deactive for now.

--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 
         </div>
 
-        <form name="contact" method="GET" action="./send-email.php">
+        <form name="contact" action="" method="POST" >
           <div class="row">
             <label for="inputFirstName" class="col-sm-2 col-form-label">First&nbsp;Name&#42;</label>
             <div class="col-sm-12 col-md-4 mb-5">
@@ -125,10 +125,6 @@
         </form>
 
       </div>
-
-<p>PHP active</p>
-
-
 
     </section>
 
