--- a/work.html
+++ b/work.html
@@ -75,6 +75,21 @@
 
         <h1 class="h1 text-center mb-3">PROJECTS</h1>
 
+        <h2 class="h2 text-left mx-auto">2020</h2>
+        <ul class="project-links">
+          <li><a class="intext-link inactive" href="#">SFU Wayfinder Application</a></li>
+          <li><a class="intext-link inactive" href="#">SFU VC Room Guide</a></li>
+          <li><a class="intext-link inactive" href="#">Burnaby Festival of Learning</a></li>
+        </ul>
+
+        <h2 class="h2 text-left mx-auto">2019</h2>
+        <ul class="project-links">
+          <li><a class="intext-link inactive" href="#">Aquatica VR</a></li>
+          <li><a class="intext-link inactive" href="#">Rising Waters VR</a></li>
+        </ul>
+
+
+
         <h2 class="h2 text-left mx-auto">2018</h2>
         <ul class="project-links">
           <li><a class="intext-link inactive" href="#">Layer Leaper Unity Engine</a></li>
