landing page card edits

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
             <!-- <img class="card-img" srcset="assets/project-slide-1-large.jpg 2000w, assets/project-slide-1-medium.jpg 1000w, assets/project-slide-1-small.jpg 500w" src="assets/project-slide-1-med.jpg" alt="Card image"> -->
 
             <img class="card-img" src="assets/project-slide-1-small.svg" alt="card image makerlab logo">
-            <div class="card-overlay">
+            <!-- <div class="card-overlay">
 
               <h5 class="special-card-text card-title pb-5 text-overlay">Maker Labs</h5>
               <p class="card-text mt-5 text-overlay">Explore Work</p>
-            </div>
+            </div> -->
           </div>
         </a>
 
@@ -97,10 +97,10 @@
             <!-- <img class="card-img" src="assets/project-slide-2-small.jpg" alt="card image"> -->
             <img class="card-img" src="assets/project-slide-2-small.svg" alt="card image of humango app logo">
 
-            <div class="card-overlay">
+            <!-- <div class="card-overlay">
               <h5 class="special-card-text  card-title pb-5 text-overlay">Humango</h5>
               <p class="card-text mt-5 text-overlay">Explore Work</p>
-            </div>
+            </div> -->
           </div>
         </a>
       </div>
@@ -116,10 +116,10 @@
 
             <img class="card-img" src="assets/project-slide-3-small.jpg" alt="card image of unity game logo">
 
-            <div class="card-overlay">
+            <!-- <div class="card-overlay">
               <h5 class="special-card-text  card-title pb-5 text-overlay">Layer Leaper</h5>
               <p class="card-text mt-5 text-overlay" style="color: rgba(180, 180, 180, 1);">Check Back Soon</p>
-            </div>
+            </div> -->
           </div>
         </a>
       </div>
@@ -131,10 +131,10 @@
 
             <img class="card-img" src="assets/project-slide-4-small.jpg" alt="card image or infinity space logo">
 
-            <div class="card-overlay">
+            <!-- <div class="card-overlay">
               <h5 class="special-card-text  card-title pb-5 text-overlay">Infinity Scape</h5>
               <p class="card-text mt-5 text-overlay" style="color: rgba(180, 180, 180, 1);">Check Back Soon</p>
-            </div>
+            </div> -->
           </div>
         </a>
       </div>
