coming soon banner

--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
 </head>
 
 <body>
-
+  
+<!--  Coming soon banner  -->
+  
+   <div class="middle">
+    <h1>COMING SOON</h1>
+    <hr>
+    <p>Aug 22</p>
+   </div>
+<!--  Coming soon  -->
   <div class="container-fluid">
 
     <!-- <h1 style="margin-left: 1rem;">UX/UI DESIGNER</h1> -->
