--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <!--  Coming soon banner  -->
   
    <div class="middle">
-    <h1>New Portfolio Coming Soon</h1>
+    <h1 style="margin=auto; width=50%; border=black;">New Portfolio Coming Soon</h1>
     <hr>
     <p>Aug 22</p>
    </div>
