--- a/index.html
+++ b/index.html
@@ -72,13 +72,7 @@
 
 <section class="content">
   
-  <!--  Coming soon banner  -->
-  
-   <div class="middle">
-    <h1 style="margin=auto; width=50%; border=black;">New Portfolio Coming Soon</h1>
-    
-   </div>
-<!--  Coming soon  -->
+
 
 
 
@@ -149,6 +143,16 @@
       </div>
 
     </div>
+  
+  <!--  Coming soon banner  -->
+  
+   <div class="middle">
+    <h1>Under Construction :)</h1>
+   </div>
+  
+  <!--  Coming soon  -->
+  
+  
 
 <!-- cards 5 and 6 -->
 <!--
